[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/assets/tilemaps/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/towers/ArtilleryT1.gd" type="Script" id=2]
[ext_resource path="res://tutorial_assets/range_overlay.png" type="Texture" id=3]
[ext_resource path="res://src/assets/tilemaps/towerDefense_tilesheet.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 64, 64 )

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="CircleShape2D" id=8]
radius = 821.156

[sub_resource type="CircleShape2D" id=11]
radius = 402.02

[node name="ArtilleryT1" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, 64 )
shape = SubResource( 10 )

[node name="Range" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
material = SubResource( 9 )
position = Vector2( 63, 62 )
shape = SubResource( 8 )

[node name="RangeSprite" type="Sprite" parent="Range"]
modulate = Color( 0.231373, 1, 0, 0.784314 )
position = Vector2( 62, 64 )
scale = Vector2( 2.75806, 2.75806 )
texture = ExtResource( 3 )

[node name="Range2" type="Area2D" parent="Range"]
visible = false
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range/Range2"]
material = SubResource( 9 )
position = Vector2( 63, 62 )
shape = SubResource( 11 )

[node name="RangeSprite" type="Sprite" parent="Range/Range2"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 4.25882, 0.105882, 0.00392157, 1 )
position = Vector2( 65, 64 )
scale = Vector2( 1.33871, 1.33871 )
texture = ExtResource( 3 )

[node name="TurretBase" type="Sprite" parent="."]
position = Vector2( 2, 2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 32, 32 )
region_enabled = true
region_rect = Rect2( 1282.14, 450.513, 64, 64 )

[node name="FacingDirection" type="Node2D" parent="."]
position = Vector2( 61, 61 )
scale = Vector2( 2, 2 )

[node name="TurretSprite" type="Sprite" parent="FacingDirection"]
modulate = Color( 0.780392, 0.780392, 0.780392, 1 )
position = Vector2( 1, 0 )
rotation = 4.71038
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 223.875, 131.637, 26.088, 25.9595 )
region_filter_clip = true

[node name="TurretSprite" type="Sprite" parent="FacingDirection/TurretSprite"]
show_behind_parent = true
position = Vector2( 0, 25 )
rotation = -3.13958
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 326.5, 97.4374, 15.1644, 30.4574 )
region_filter_clip = true

[node name="Timer" type="Timer" parent="FacingDirection/TurretSprite/TurretSprite"]

[node name="Muzzle" type="Position2D" parent="FacingDirection"]
position = Vector2( 41, 0 )

[node name="Flash" type="Sprite" parent="FacingDirection/Muzzle"]
visible = false
position = Vector2( 29, 0 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 1280.5, 766, 64, 64 )

[node name="BulletContainer" type="Node2D" parent="FacingDirection"]

[node name="FiringRate" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="body_exited" from="Range/Range2" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="FacingDirection/TurretSprite/TurretSprite/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FiringRate" to="." method="_on_FiringRate_timeout"]
